
    - Fixed a bug in admindb.py in the implementation of replacing "No Reason
      Given" with the default rejection reason.  Bug #325016.

    - Changed Gui/Topics.py to validate regexps in VERBOSE mode.  Bug #327008.

    - Worked around a potential problem in HyperArch.py with unicode character
      set arguments.  Bug #328353.

    - Recognize a couple more bounces.

 i18n

    - Updated Dutch, Catalan and Polish translations.

  Miscellaneous

    - Added Lindsay Haisley's courier_to_mailman.py to the contrib directory.

    - Added John Dennis' (RedHat) FHS patch to the contrib directory.

2.1.11 (30-Jun-2008)

  New Features

    - Added a new cron/cull_bad_shunt script to cull and optionally
      archive old entries from the bad and shunt queues. This is controlled
      by new Defaults.py/mm_cfg.py settings BAD_SHUNT_STALE_AFTER (default
      7 days) and BAD_SHUNT_ARCHIVE_DIRECTORY (default None) which determine
      how long to keep bad and shunt queue entries and optionally, where to
      archive removed entries.

    - Prepended list name to bounce log unrecognized bounce messages.

    - Added a new Defaults.py|mm_cfg.py setting ACCEPTABLE_LISTNAME_CHARACTERS
      with default value '[-+_.=a-z0-9]'.  This Python regular expression
      character class specifies the characters allowed in list names.  The
      motivation for this is the fact that previously, a list named, e.g.,
      xxx&yyy could be created and MTA aliases generated that would cause
      The MTA to execute yyy as a command.  There is a possible security issue
      here, but it is not believed to be exploitable in any meaningful way.

  Bug fixes and other patches

    - Changed the preservation of unparseable messages to be conditional on
      the Defaults.py/mm_cfg.py setting of QRUNNER_SAVE_BAD_MESSAGES and
      changed the queue directory in which messages are preserved from 'shunt'
      to 'bad'.

    - Fixed a bug introduced in 2.1.10 that caused some email subscribe